# Dupkollabnotes

./: .gitignore  DupKollabNotes.spec  README.md  SynkNote.spec  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/workflows/: desktop-release.yml
docs/: architecture.md  kurzstart.md
docs/ai-prompts/: improve_grammar_and_style.txt  improve_structure.txt  summarize.txt  translate_to_english.txt
release/DupKollabNotes-win64/: KURZSTART.md  README.md
release/DupKollabNotes-win64/_internal/pywebview-6.2.1.dist-info/: RECORD
release/SynkNote-win64/: KURZSTART.md  README.md
release/SynkNote-win64/_internal/markdown-3.10.2.dist-info/: RECORD
scripts/: build-desktop.ps1  make_icon.py
src/: App.tsx  index.css  main.tsx
src/api/: index.ts
src/components/common/: Badge.tsx  Modal.tsx
src/components/dashboard/: StatCard.tsx
src/components/layout/: AppShell.tsx  NavSidebar.tsx  TopBar.tsx
src/components/notes/: CommentPanel.tsx  NoteContextSidebar.tsx  NoteEditModal.tsx  NoteViewer.tsx  NotesSidebar.tsx
src/components/projects/: ProjectDetail.tsx  ProjectList.tsx
src/dupkollabnotes/: __init__.py  __main__.py  api.py  config.py  desktop.py  main.py
src/dupkollabnotes/core/: __init__.py  database.py  llm_service.py  models.py  security.py  services.py
src/pages/: DashboardPage.tsx  LoginPage.tsx  MetaPage.tsx  MilestonesPage.tsx  NotesPage.tsx  ProjectsPage.tsx  SearchPage.tsx  SettingsPage.tsx  TodosPage.tsx  UsersPage.tsx
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: listViews.ts
(+4 files in other folders)
