[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupkollabnotes"
version = "0.1.0"
description = "Lokale kollaborative Markdown-Notiz-App fuer Teamarbeit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "SQLAlchemy>=2.0",
  "markdown>=3.7",
  "bleach>=6.1",
  "jinja2>=3.1",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
dupkollabnotes = "dupkollabnotes.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
